--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,14 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
 
     testImplementation 'org.objenesis:objenesis:2.3'
+
+    // Koin for Android
+    implementation "org.koin:koin-android:2.0.1"
+    // Koin AndroidX Scope feature
+    implementation "org.koin:koin-androidx-scope:2.0.1"
+    // Koin AndroidX ViewModel feature
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+
+    // Koin testing tools
+    testImplementation "org.koin:koin-test:2.0.1"
 }
