--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,5 @@ dependencies {
 
     // Koin testing tools
     testImplementation "org.koin:koin-test:2.0.1"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 }
