--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,5 +95,7 @@ dependencies {
 
     // Koin testing tools
     testImplementation "org.koin:koin-test:2.0.1"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.0.0'
 }
